--- a/styles/style.css
+++ b/styles/style.css
@@ -49,11 +49,11 @@ body{
     width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px; 
 }
 
 .presentacion__contenido__titulo{
-    font-size: 2.25rem;
+    font-size: 2rem; /*2.5rem*/
     font-family: var(--fuente-krona);
 }
 
@@ -97,20 +97,17 @@ body{
 }
 
 .presentacion__enlaces__link:hover {
-    cursor: pointer;
     background-color: var(--hover-color);
 }
 
 .presentacion__foto{
-    box-sizing: border-box;
     width: 50%;
-    height: 550px;
-    padding: 0.3125rem;
+    margin-left: 10px;
 }
 
 .footer{
     background-color: var(--color-terciario);
-    padding: 1.5rem;
+    padding: 24px;
     text-align: center;
     color: var(--color-primario);
     font-family: var(--fuente-montserrat);
@@ -119,7 +116,7 @@ body{
 
 }
 
-@media (max-width: 1023px) {
+@media (max-width: 1200px) {
     .header {
         padding: 10%;
     }
