--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ body{
     width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 40px; 
+    gap: 30px; 
 }
 
 .presentacion__contenido__titulo{
@@ -102,7 +102,7 @@ body{
 
 .presentacion__foto{
     width: 50%;
-    margin-left: 10px;
+    border-radius: 10%;
 }
 
 .footer{
