--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
     --color-primario: #000000;
     --color-secundario: #F6F6F6;
     --color-terciario: #22D4FD;
+    --color-cuaternario: #0A2A43;
     --hover-color: #272727;
     --fuente-krona: 'Krona One', sans-serif;
     --fuente-montserrat: 'Montserrat', sans-serif;
@@ -11,30 +12,50 @@
 
 * {
     padding: 0;
-    margin:0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-body{
-    box-sizing: border-box;
+body {
     background-color: var(--color-primario);
     color: var(--color-secundario);
+    font-family: var(--fuente-montserrat);
 }
 
 .header {
-    padding: 2% 0% 0% 15%;
+    background-color: var(--color-cuaternario);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    z-index: 100;
+    display: flex;
+    justify-content: center; 
+    padding: 0.5rem;
 }
 
 .header__menu {
+    width: 100%;
+    max-width: 1200px;
     display: flex;
-    gap: 80px;
+    justify-content: center; 
+    align-items: center;
+    gap: 2rem; /* Aumenta el espacio entre los enlaces */
+    background-color: var(--color-cuaternario);
+    border-radius: 10px; 
+    padding: 2px 2px; 
 }
 
 .header__menu__link {
-    font-family: var(--fuente-montserrat);
     font-size: 1.5rem;
     font-weight: 600;
     color: var(--color-terciario);
     text-decoration: none;
+    padding: 10px 15px; /* Añade padding para el efecto hover */
+    border-radius: 5px; /* Añade bordes redondeados */
+    transition: background-color 0.3s ease; /* Añade una transición suave */
+}
+
+.header__menu__link:hover {
+    background-color: var(--color-terciario); /* Cambia el fondo al pasar el mouse */
+    color: var(--color-primario); /* Cambia el color del texto */
 }
 
 .presentacion {
@@ -82,9 +103,9 @@ body{
 
 .presentacion__enlaces__link{
     display: flex;
-    justify-content: center;
     width: 50%;
-    text-align: center;
+    justify-content: center;
+    align-items: center;
     border: 2px solid var(--color-terciario);
     border-radius: 8px;
     font-size: 1.5rem;
@@ -105,14 +126,14 @@ body{
     border-radius: 10%;
 }
 
-.footer{
-    background-color: var(--color-terciario);
-    padding: 24px;
+.footer {
+    background-color: var(--color-cuaternario);
+    padding: 1.5rem;
     text-align: center;
-    color: var(--color-primario);
-    font-family: var(--fuente-montserrat);
+    color: var(--color-terciario);
     font-size: 1.5rem;
     font-weight: 400;
+    border-radius: 0 0 10px 10px; /* Añade bordes redondeados en la parte inferior */
 }
 
 @media (max-width: 1200px) {
