--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,7 @@ body {
     color: var(--color-terciario);
     text-decoration: none;
     padding: 10px 15px; /* Añade padding para el efecto hover */
-    border-radius: 5px; /* Añade bordes redondeados */
+    border-radius: 5px; 
     transition: background-color 0.3s ease; /* Añade una transición suave */
 }
 
@@ -147,24 +147,6 @@ body {
     color: var(--color-terciario);
     font-size: 1.5rem;
     font-weight: 400;
-    border-radius: 0 0 10px 10px; /* Añade bordes redondeados en la parte inferior */
+    border-radius: 0 0 10px 10px; 
 }
 
-@media (max-width: 1200px) {
-    .header {
-        padding: 10%;
-    }
-    .header__menu {
-        justify-content: center;
-    }
-    .presentacion {
-        flex-direction: column-reverse;
-        padding: 5%;
-    }
-    .presentacion__contenido{
-        width: auto;
-    }
-    .footer{
-        
-    }
-}
